--- a/src/Reportes/Reporte_Clientes.jrxml
+++ b/src/Reportes/Reporte_Clientes.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="a6622fa1-389a-4a31-bc1a-4740f6efcc2e">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.x" value="110"/>
 	<property name="ireport.y" value="0"/>
 	<style name="Title" forecolor="#FFFFFF" fontName="Times New Roman" fontSize="50" isBold="false" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#666666" fontName="Times New Roman" fontSize="18" isBold="false" pdfFontName="Times-Roman"/>
@@ -57,13 +57,6 @@ FROM
 					</textElement>
 					<text><![CDATA[Listado de Clientes]]></text>
 				</staticText>
-				<textField pattern="EEEEE dd MMMMM yyyy">
-					<reportElement x="404" y="12" width="144" height="20" forecolor="#FFFFFF" uuid="64a705cd-1c2c-4622-a8c5-40518f72cc4e"/>
-					<textElement textAlignment="Right">
-						<font fontName="Verdana" size="12"/>
-					</textElement>
-					<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
-				</textField>
 			</frame>
 			<image>
 				<reportElement x="118" y="0" width="301" height="66" uuid="dd51d4ea-95e3-4d75-9eba-697b7c1ca50e"/>
@@ -77,73 +70,73 @@ FROM
 	<columnHeader>
 		<band height="19" splitType="Stretch">
 			<staticText>
-				<reportElement style="Column header" x="8" y="0" width="67" height="18" forecolor="#000000" uuid="239fe6bb-969f-4aba-a4fc-d8c73ba3f3d7"/>
-				<textElement textAlignment="Center" verticalAlignment="Bottom">
+				<reportElement style="Column header" x="3" y="0" width="56" height="18" forecolor="#000000" uuid="239fe6bb-969f-4aba-a4fc-d8c73ba3f3d7"/>
+				<textElement textAlignment="Left" verticalAlignment="Bottom">
 					<font fontName="Verdana" size="11" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Codigo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="Column header" x="194" y="0" width="85" height="18" forecolor="#000000" uuid="3aa3ed17-10d4-46f5-a465-12c0f454b5cd"/>
+				<reportElement style="Column header" x="170" y="0" width="88" height="18" forecolor="#000000" uuid="59cabce8-6027-4c02-8668-562f96e737c9"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font fontName="Verdana" size="11" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Cliente]]></text>
+				<text><![CDATA[RIF/Cedula]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="Column header" x="285" y="0" width="88" height="18" forecolor="#000000" uuid="59cabce8-6027-4c02-8668-562f96e737c9"/>
-				<textElement textAlignment="Center" verticalAlignment="Bottom">
-					<font fontName="Verdana" size="11" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Cedula]]></text>
-			</staticText>
-			<staticText>
-				<reportElement style="Column header" x="383" y="1" width="168" height="18" forecolor="#000000" uuid="82e41ed7-3de1-4237-aad0-d89cf77a1590"/>
+				<reportElement style="Column header" x="385" y="0" width="171" height="18" forecolor="#000000" uuid="82e41ed7-3de1-4237-aad0-d89cf77a1590"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font fontName="Verdana" size="11" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Num. Telefonicos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="Column header" x="78" y="0" width="109" height="18" forecolor="#000000" uuid="e5200557-3e4e-4dcc-9dbf-0f67d6a8342b"/>
+				<reportElement style="Column header" x="59" y="0" width="112" height="18" forecolor="#000000" uuid="e5200557-3e4e-4dcc-9dbf-0f67d6a8342b"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font fontName="Verdana" size="11" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Empresa]]></text>
+				<text><![CDATA[Empresa/Cliente]]></text>
+			</staticText>
+			<staticText>
+				<reportElement style="Column header" x="258" y="0" width="127" height="18" forecolor="#000000" uuid="c1d94fc2-9fb2-4cab-b67d-a35cf7574bf6"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
+					<font fontName="Verdana" size="11" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Direccion]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="31" splitType="Stretch">
 			<frame>
-				<reportElement style="Row" isPrintRepeatedValues="false" mode="Opaque" x="0" y="1" width="553" height="20" uuid="59972cf7-d5c3-4106-9e54-7082579d92a2"/>
+				<reportElement style="Row" isPrintRepeatedValues="false" mode="Opaque" x="0" y="1" width="553" height="30" uuid="59972cf7-d5c3-4106-9e54-7082579d92a2"/>
 				<textField>
-					<reportElement x="3" y="0" width="72" height="20" uuid="402087cb-7436-48cc-8444-f28a3498d85a"/>
-					<textElement textAlignment="Center"/>
+					<reportElement x="3" y="0" width="56" height="20" uuid="402087cb-7436-48cc-8444-f28a3498d85a"/>
+					<textElement textAlignment="Left"/>
 					<textFieldExpression><![CDATA[$F{clientes_cod_cliente}]]></textFieldExpression>
 				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="194" y="0" width="45" height="20" uuid="88f75d71-259a-49ae-bdd0-fda2303528b3"/>
-					<textFieldExpression><![CDATA[$F{clientes_primer_nombre}]]></textFieldExpression>
-				</textField>
 				<textField isBlankWhenNull="false">
-					<reportElement x="285" y="0" width="88" height="20" uuid="f979aec9-0537-4ccf-81ec-f05e778fe52b"/>
+					<reportElement x="171" y="0" width="87" height="20" uuid="f979aec9-0537-4ccf-81ec-f05e778fe52b"/>
 					<textElement textAlignment="Center"/>
 					<textFieldExpression><![CDATA[$F{clientes_cedula}]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
-					<reportElement x="78" y="0" width="109" height="20" uuid="38e6d248-9694-444b-91dc-b6ab08ef6213"/>
+					<reportElement x="59" y="0" width="109" height="20" uuid="38e6d248-9694-444b-91dc-b6ab08ef6213"/>
 					<textFieldExpression><![CDATA[$F{clientes_nombre_empresa}]]></textFieldExpression>
 				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="234" y="0" width="45" height="20" uuid="9f87dc1f-3fe0-4133-b6a1-a48e75d19956"/>
-					<textFieldExpression><![CDATA[$F{clientes_primer_apellido}]]></textFieldExpression>
+				<textField>
+					<reportElement x="258" y="0" width="127" height="30" uuid="4d0bed76-5e45-4bc9-9f9b-c8f527345487"/>
+					<textFieldExpression><![CDATA[$F{clientes_direccion}]]></textFieldExpression>
+				</textField>
+				<textField>
+					<reportElement x="385" y="0" width="168" height="30" uuid="163f1f47-d040-4bb4-923e-d7eb3790b417"/>
+					<textElement textAlignment="Center"/>
+					<textFieldExpression><![CDATA[$F{clientes_telefono1}+"-"+$F{clientes_telefono2}]]></textFieldExpression>
 				</textField>
 			</frame>
 			<textField>
-				<reportElement x="383" y="0" width="168" height="31" uuid="36e81888-0784-4117-bc2d-bab08978e15d"/>
-				<textElement textAlignment="Center"/>
-				<textFieldExpression><![CDATA["0"+$F{clientes_telefono1}+"-"+"0"+$F{clientes_telefono2}]]></textFieldExpression>
+				<reportElement x="59" y="0" width="112" height="20" uuid="edc66f1b-70d0-47ca-b93a-51778c28a07c"/>
+				<textFieldExpression><![CDATA[$F{clientes_primer_nombre}+""+$F{clientes_primer_apellido}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -176,7 +169,7 @@ FROM
 					<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 				</textField>
 				<textField pattern="dd-MMM-yyyy">
-					<reportElement x="18" y="4" width="100" height="20" forecolor="#FFFFFF" uuid="2d63c194-34de-49f5-b796-897788a1c426"/>
+					<reportElement x="18" y="4" width="129" height="20" forecolor="#FFFFFF" uuid="2d63c194-34de-49f5-b796-897788a1c426"/>
 					<textElement>
 						<font fontName="Verdana"/>
 					</textElement>
